# hasim-alpha

./: .gitignore  Makefile.in  README  changes  configure  configure.in
admin/: mytags
config/bm/alpha/: 6_375.cfx  SPEC.cfx  parsec.cfx  splash-2.cfx  tests.cfx
config/pm/hasim-alpha/alpha-5stage/: alpha_5stage_exe.apm  alpha_5stage_htg.apm  alpha_5stage_hybrid_exe.apm  alpha_5stage_hybrid_htg.apm  alpha_5stage_hybrid_sim.apm
config/pm/hasim-alpha/alpha-inorder/: alpha_inorder_128_vc707.apm  alpha_inorder_64_exe.apm  alpha_inorder_64_vc707.apm  alpha_inorder_acp.apm  alpha_inorder_exe.apm  alpha_inorder_exe_0064.apm  alpha_inorder_exe_64.apm  alpha_inorder_htg.apm  alpha_inorder_ml605.apm  alpha_inorder_vc707.apm  alpha_inorder_vc707_0008.apm  alpha_inorder_vc707_0016.apm  alpha_inorder_vc707_0064.apm  alpha_inorder_vc709_0064.apm  alpha_inorder_vc709_0256.apm  inorder_alpha_exe.apm  inorder_alpha_htg.apm
config/pm/hasim-alpha/alpha-ooo/: alpha_single_issue_ooo_exe.apm  alpha_single_issue_ooo_htg.apm  alpha_superscalar_inorder_exe.apm  alpha_superscalar_inorder_htg.apm  alpha_superscalar_ooo_exe.apm  alpha_superscalar_ooo_htg.apm
config/pm/hasim-alpha/alpha-smt/: alpha_smt_exe.apm
config/pm/hasim-alpha/alpha-superscalar-ooo/: alpha_superscalar_inorder_htg.apm  (+2 more)
experiments/hasim-alpha/nightly/: nightly.benchmarks  nightly.models
experiments/hasim-alpha/nightly-fpga/: nightly-fpga.benchmarks  nightly-fpga.models
experiments/hasim-alpha/regression/: regression.benchmarks  regression.models
platform/: Makefile
platform/m5/: m5-alpha-se.awb  m5-alpha.awb
(+68 files in other folders)
